tests/integration/error/logical_non_bool.alo
// expect-error: Logical operation '&&' requires boolean operands

fun main() -> void {
    imut value: bool = 1 && true;
}
